@@ -4,15 +4,19 @@
 
 program = 'vdifspec'
 author  = 'Walter Brisken'
-version = '0.6'
-verdate = '20191110'
+version = '0.7'
+verdate = '20210417'
 
 from os import system
 from sys import exit, argv
 
+def printVersion():
+	print('%s ver. %s  %s  %s' % (program, version, author, verdate))
 
 def usage():
-	print('\n%s ver. %s  %s  %s\n' % (program, version, author, verdate))
+	print('')
+	printVersion()
+	print('')
 	print('A VDIF spectrometer for multi-thread VDIF data.  Uses vmux')
 	print('and m5spec to do the heavy lifting.\n')
 	print('Usage : %s <infile> <frame size> <data rate> <threadlist> <nchan> <nint> <outfile> [<nbit> [<offset> [<bchan> [<echan>]]]]\n' % program)
@@ -27,6 +31,10 @@ def usage():
 	print('  <offset> optionally jump into input file by this many bytes\n')
 	print('  <bchan> and <echan> select range of channels to store in output file\n')
 	print('Note: Only works on 2-bit real data for now...\n')
+
+if '--version' in argv:
+	printVersion()
+	exit()
 
 if len(argv) < 8:
 	usage()
